[package]
name = "chaykin"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
url = "2.5"
rio_turtle = "0.8"
rio_api = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
percent-encoding = "2.3"
anyhow = "1.0"

